<resources>
    <string name="app_name">Test</string>
    <string name="test">test</string>
    <string name="prev_btn">이전</string>
    <string name="next_btn">다음</string>
    <string name="title">곡명</string>
    <string name="artist">아티스트</string>
    <string name="date">날짜</string>
    <string name="type">분류</string>
    <string name="song">노래 목록</string>
    <string name="introduce">소개</string>
</resources>
